apply plugin: 'com.android.application'

// تحميل بيانات توقيع الإصدار من ملف محلي غير متتبَّع في git (android/app/keystore.properties)،
// أو من متغيرات بيئة CI كبديل (ANDROID_KEYSTORE_PASSWORD / ANDROID_KEY_ALIAS / ANDROID_KEY_PASSWORD)
// بدلاً من كتابة كلمة السر نصياً داخل هذا الملف المتتبَّع في المستودع.
def keystorePropertiesFile = file('keystore.properties')
def keystoreProperties = new Properties()
if (keystorePropertiesFile.exists()) {
    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
}
def resolvedStoreFile = keystoreProperties['storeFile'] ?: 'almezo-release.keystore'
def resolvedStorePassword = keystoreProperties['storePassword'] ?: System.getenv('ANDROID_KEYSTORE_PASSWORD')
def resolvedKeyAlias = keystoreProperties['keyAlias'] ?: (System.getenv('ANDROID_KEY_ALIAS') ?: 'almezo')
def resolvedKeyPassword = keystoreProperties['keyPassword'] ?: System.getenv('ANDROID_KEY_PASSWORD')

android {
    namespace = "com.almezo.servers"
    compileSdk = rootProject.ext.compileSdkVersion
    defaultConfig {
        applicationId "com.almezo.servers"
        minSdkVersion rootProject.ext.minSdkVersion
        targetSdkVersion rootProject.ext.targetSdkVersion
        versionCode 135
        versionName "1.4.5"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        aaptOptions {
             // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
             // Default: https://android.googlesource.com/platform/frameworks/base/+/282e181b58cf72b6ca770dc7ca5f91f135444502/tools/aapt/AaptAssets.cpp#61
            ignoreAssetsPattern = '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
        }
    }
    signingConfigs {
        release {
            storeFile file(resolvedStoreFile)
            storePassword resolvedStorePassword
            keyAlias resolvedKeyAlias
            keyPassword resolvedKeyPassword
        }
    }
    buildTypes {
        debug {
            signingConfig signingConfigs.release
        }
        release {
            signingConfig signingConfigs.release
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    applicationVariants.all { variant ->
        variant.outputs.all {
            outputFileName = "ALmEz0.apk"
        }
    }
}

repositories {
    flatDir{
        dirs '../capacitor-cordova-android-plugins/src/main/libs', 'libs'
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
    implementation "androidx.coordinatorlayout:coordinatorlayout:$androidxCoordinatorLayoutVersion"
    implementation "androidx.core:core-splashscreen:$coreSplashScreenVersion"
    implementation project(':capacitor-android')
    testImplementation "junit:junit:$junitVersion"
    androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
    implementation project(':capacitor-cordova-android-plugins')

    // المشغل الأصلي: قوائم تعيد استخدام البطاقات (بدل آلاف العناصر)، وتحميل صور مع تخزين وتصغير
    implementation "androidx.recyclerview:recyclerview:1.3.2"
    implementation "com.github.bumptech.glide:glide:4.16.0"

    // AndroidX Media3 (ExoPlayer) for native hardware-accelerated MKV, MP4, TS, HLS playback
    implementation "androidx.media3:media3-exoplayer:1.2.1"
    implementation "androidx.media3:media3-exoplayer-hls:1.2.1"
    implementation "androidx.media3:media3-ui:1.2.1"
    implementation "androidx.media3:media3-common:1.2.1"
    implementation "androidx.media3:media3-datasource:1.2.1"

    // إشعارات المدير الفورية (FCM) حتى والتطبيق مغلق — انظر nat/PushService
    implementation platform("com.google.firebase:firebase-bom:33.7.0")
    implementation "com.google.firebase:firebase-messaging"
}

apply from: 'capacitor.build.gradle'

try {
    def servicesJSON = file('google-services.json')
    if (servicesJSON.text) {
        apply plugin: 'com.google.gms.google-services'
    }
} catch(Exception e) {
    logger.info("google-services.json not found, google-services plugin not applied. Push Notifications won't work")
}
